// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Menu should match snapshot with cloud free and team limit reached 1`] = `null`;

exports[`components/Menu should match snapshot with cloud free trial 1`] = `null`;

exports[`components/Menu should match snapshot with guest access disabled and no team invite permission 1`] = `
<Menu
  ariaLabel="team menu"
>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          undefined,
        ]
      }
    >
      <MenuItemAction
        id="dashboardManager"
        onClick={[Function]}
        show={true}
        text="Tableau de bord"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={false}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with id 1`] = `
<Menu
  ariaLabel="team menu"
  id="test-id"
>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          undefined,
        ]
      }
    >
      <MenuItemAction
        id="dashboardManager"
        onClick={[Function]}
        show={true}
        text="Tableau de bord"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={false}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing disabled 1`] = `
<Menu
  ariaLabel="team menu"
>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          undefined,
        ]
      }
    >
      <MenuItemAction
        id="dashboardManager"
        onClick={[Function]}
        show={true}
        text="Tableau de bord"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={false}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing disabled in mobile 1`] = `
<Menu
  ariaLabel="main menu"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="mentions"
        >
          @
        </i>
      }
      id="recentMentions"
      onClick={[Function]}
      show={true}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={
        <i
          className="fa fa-bookmark"
        />
      }
      id="flaggedPosts"
      onClick={[Function]}
      show={true}
      text="Saved Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      ariaLabel="Profile"
      icon={
        <i
          className="fa fa-cog"
        />
      }
      id="accountSettings"
      onClick={[Function]}
      show={true}
      text="Profile"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup />
  <MenuGroup />
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={true}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="fa fa-sign-out"
        />
      }
      id="logout"
      onClick={[Function]}
      show={true}
      text="Log Out"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing enabled 1`] = `
<Menu
  ariaLabel="team menu"
>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          undefined,
        ]
      }
    >
      <MenuItemAction
        id="dashboardManager"
        onClick={[Function]}
        show={true}
        text="Tableau de bord"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={true}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with most of the thing enabled in mobile 1`] = `
<Menu
  ariaLabel="main menu"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="mentions"
        >
          @
        </i>
      }
      id="recentMentions"
      onClick={[Function]}
      show={true}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={
        <i
          className="fa fa-bookmark"
        />
      }
      id="flaggedPosts"
      onClick={[Function]}
      show={true}
      text="Saved Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      ariaLabel="Profile"
      icon={
        <i
          className="fa fa-cog"
        />
      }
      id="accountSettings"
      onClick={[Function]}
      show={true}
      text="Profile"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup />
  <MenuGroup />
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={true}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="fa fa-sign-out"
        />
      }
      id="logout"
      onClick={[Function]}
      show={true}
      text="Log Out"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with plugins 1`] = `
<Menu
  ariaLabel="team menu"
>
  <MenuGroup>
    <Connect(SystemPermissionGate)
      permissions={
        Array [
          undefined,
        ]
      }
    >
      <MenuItemAction
        id="dashboardManager"
        onClick={[Function]}
        show={true}
        text="Tableau de bord"
      />
    </Connect(SystemPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogProps={
          Object {
            "teamID": "team-id",
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        id="manageGroups"
        modalId="manage_team_groups"
        show={false}
        text="Manage Groups"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={false}
      id="plugin-id-1_pluginmenuitem"
      key="plugin-id-1_pluginmenuitem"
      onClick={[Function]}
      show={true}
    />
    <MenuItemAction
      icon={false}
      id="plugind-id-2_pluginmenuitem"
      key="plugind-id-2_pluginmenuitem"
      onClick={[Function]}
      show={true}
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={false}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
</Menu>
`;

exports[`components/Menu should match snapshot with plugins in mobile 1`] = `
<Menu
  ariaLabel="main menu"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="mentions"
        >
          @
        </i>
      }
      id="recentMentions"
      onClick={[Function]}
      show={true}
      text="Recent Mentions"
    />
    <MenuItemAction
      icon={
        <i
          className="fa fa-bookmark"
        />
      }
      id="flaggedPosts"
      onClick={[Function]}
      show={true}
      text="Saved Posts"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      ariaLabel="Profile"
      icon={
        <i
          className="fa fa-cog"
        />
      }
      id="accountSettings"
      onClick={[Function]}
      show={true}
      text="Profile"
    />
  </MenuGroup>
  <MenuGroup>
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "manage_team",
        ]
      }
      teamId="team-id"
    >
      <MenuItemToggleModalRedux
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        icon={
          <i
            className="fa fa-user-plus"
          />
        }
        id="addGroupsToTeam"
        modalId="add_groups_to_team"
        show={false}
        text="Add Groups to Team"
      />
    </Connect(TeamPermissionGate)>
  </MenuGroup>
  <MenuGroup />
  <MenuGroup>
    <MenuItemAction
      id="plugin-id-1_pluginmenuitem"
      key="plugin-id-1_pluginmenuitem"
      onClick={[Function]}
      show={true}
    />
    <MenuItemAction
      id="plugind-id-2_pluginmenuitem"
      key="plugind-id-2_pluginmenuitem"
      onClick={[Function]}
      show={true}
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemLink
      id="integrations"
      show={true}
      text="Integrations"
      to="/team_name/integrations"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="fa fa-sign-out"
        />
      }
      id="logout"
      onClick={[Function]}
      show={true}
      text="Log Out"
    />
  </MenuGroup>
</Menu>
`;
